clusters/main/kubernetes/kube-system/cilium/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: domain-0-le-prod
    cert-manager.io/private-key-rotation-policy: Always
spec:
  ingressClassName: internal
  rules:
  - host: hubble.${DOMAIN_0}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hubble-ui
            port:
              number: 80
  tls:
    - hosts:
      - hubble.${DOMAIN_0}
      secretName: hubble-tls-0
